# OpenGL_Study

./: CMakeLists.txt
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
shaders/: shader.frag  shader.vert
src/: Camera.hpp  Main.cpp  Shader.h  Shader.hpp  main.cpp
